# kepg

./: .gitignore  CMakeLists.txt  README.md  kepg.kdev4
doc/: CMakeLists.txt  index.docbook
src/: CMakeLists.txt  CMakeLists.txt~  Messages.sh  channel_prefs.ui  channellist.cpp  channellist.cpp~  channellist.h  channellist.h~  channelswidget.cpp  channelswidget.h  datalist.cpp  datalist.cpp~  datalist.h  datalist.h~  kepg.cpp  kepg.cpp~  kepg.desktop  kepg.h  kepg.kcfg  kepg.kcfg~  kepgui.rc  kepgui.rc~  kepgview.cpp  kepgview.cpp~  kepgview.h  kepgview.h~  kepgview_base.ui  main.cpp  settings.kcfgc  settings.kcfgc~  stationday.cpp  stationday.cpp~  stationday.h~  xmltvbase.cpp  xmltvbase.cpp~  xmltvbase.h  xmltvbase.h~
